# certinfo

./: .gitignore  CMakeLists.txt  README.md  certinfo.spec
src/: version.h.in
src/c/: certinfo.c
src/cpp/: certinfo.cpp
